--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:Oi49Za11eStkSeWUmE1XhueDJat+aI+9sDBHKg45QRc=
+APP_KEY=base64:Pfo/KWKFzdRl0oN4aXlg/O1ymcrwFvVuq/TEZU0dMy8=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
