--- a/.env
+++ b/.env
@@ -9,6 +9,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 SOAP_WSDL_URL=http://localhost:7037/Activities.asmx
+SUN_API_URL=https://sgvd-sunset.herokuapp.com
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
