--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "postcss": "^8.1.14"
     },
     "dependencies": {
+        "@pusher/push-notifications-web": "^1.1.0",
         "react-dom": "^17.0.2"
     }
 }
