--- a/.env
+++ b/.env
@@ -12,11 +12,11 @@ SOAP_WSDL_URL=http://localhost:7037/Activities.asmx
 SUN_API_URL=https://sgvd-sunset.herokuapp.com
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mariadb
 DB_PORT=3306
 DB_DATABASE=sgv-dashboard
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=admin
+DB_PASSWORD=qlsdfkjlmdqsr
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -56,7 +56,7 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 GOOGLE_CLIENT_ID=898849855930-k6eejo08vsc7jr9qpqqqsee53egt0ofm.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-GOOGLE_REDIRECT_URL=http://localhost:8000/googleLogin/redirect
+GOOGLE_REDIRECT_URL=http://localhost:3000/googleLogin/redirect
 
 FACEBOOK_CLIENT_ID=4800039700039264
 FACEBOOK_CLIENT_SECRET=ff728a433e2118b3d41c379b1c00b951
