--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,19 +5,20 @@ services:
     image: docker.io/bitnami/mariadb:10.6
     environment:
       # ALLOW_EMPTY_PASSWORD is recommended only for development.
-      - ALLOW_EMPTY_PASSWORD=yes
-      - MARIADB_USER=my_user
-      - MARIADB_DATABASE=my_database
-      - MARIADB_PASSWORD=my_password
+      # - ALLOW_EMPTY_PASSWORD=yes
+      - MARIADB_ROOT_PASSWORD=nkmjaqiurqrnlm
+      - MARIADB_USER=admin
+      - MARIADB_DATABASE=sgv-dashboard
+      - MARIADB_PASSWORD=qlsdfkjlmdqsr
 
   laravel:
     tty: true
     image: docker.io/bitnami/laravel:8
     environment:
       - DB_HOST=mariadb
-      - DB_USERNAME=my_user
-      - DB_DATABASE=my_database
-      - DB_PASSWORD=my_password
+      - DB_USERNAME=admin
+      - DB_DATABASE=sgv-dashboard
+      - DB_PASSWORD=qlsdfkjlmdqsr
     depends_on:
       - mariadb
     ports:
@@ -25,4 +26,3 @@ services:
     volumes:
       - ./:/app
     privileged: true # Privileged mode could be required to run this container under Windows
-
