--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-SOAP_WSDL_URL=http://localhost:7037/Activities.asmx
+SOAP_WSDL_URL=http://activitydb:7037/Activities.asmx
 SUN_API_URL=https://sgvd-sunset.herokuapp.com
 
 DB_CONNECTION=mysql
