use api key for sun service

--- a/.env
+++ b/.env
@@ -10,6 +10,7 @@ LOG_LEVEL=debug
 
 SOAP_WSDL_URL=http://activitydb:7037/Activities.asmx
 SUN_API_URL=https://sgvd-sunset.herokuapp.com
+SUN_API_KEY=B3rDwaXJ24As6Q6o5BEN64VFgemKMRJG
 
 DB_CONNECTION=mysql
 DB_HOST=mariadb
