correcte api routes

--- a/.env
+++ b/.env
@@ -12,6 +12,12 @@ SOAP_WSDL_URL=http://activitydb:7037/Activities.asmx
 SUN_API_URL=https://sgvd-sunset.herokuapp.com
 SUN_API_KEY=B3rDwaXJ24As6Q6o5BEN64VFgemKMRJG
 
+MAP_API_KEY=5b3ce3597851110001cf62484b7bc6e27b5b47fabce3821209f35d73
+MAP_API_URL=https://sgvd-maps.herokuapp.com
+
+WEATHER_API_KEY=06c8cc719b
+WEATHER_API_URL=https://weerlive.nl/api/json-data-10min.php?
+
 DB_CONNECTION=mysql
 DB_HOST=mariadb
 DB_PORT=3306
